Fixed issue with min-width on smaller screensize

--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    min-width: 250px
+    min-width: 250px;
 }
 
 .sidebar__twitterIcon {
@@ -146,10 +146,16 @@
     vertical-align: top;
 }
 
+@media (max-width: 1300px) {
+    .sidebar {
+        min-width: 0;
+    }
+}
+
 @media (max-width: 1100px) {
     .sidebar {
         padding: 0px;
-        /* min-width: none; */
+        /* min-width: none !important; */
         /* flex: 0.3; */
     }
 
